--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "boilerplate"
   ],
   "scripts": {
-  "start": "node server.js"
+    "start": "node server.js"
   },
   "author": "Blake Johnston",
   "license": "MIT",
@@ -27,8 +27,11 @@
     "dotenv": "^1.2.0",
     "express": "^4.12.4",
     "express-session": "^1.11.3",
+    "imgurjs": "^1.1.2",
+    "mongodb": "^2.1.7",
     "mongoose": "^4.1.0",
     "passport": "^0.3.0",
-    "passport-github": "^1.0.0"
+    "passport-github": "^1.0.0",
+    "request": "^2.69.0"
   }
 }
